
| `etaoin.ide.main`
| all except for: `-main`
|===
+
If we got this wrong your code will fail, you will tell us, and we can discuss.

Other Changes

* https://github.com/clj-commons/etaoin/issues/380[#380]: Etaoin is now Babashka compatible!
* https://github.com/clj-commons/etaoin/issues/413[#413]: Etaoin now exports a clj-kondo config to help with the linting of its many handy macros
* https://github.com/clj-commons/etaoin/issues/383[#383]: Drop testing for Safari on Windows, Apple no longer releases Safari for Windows
* https://github.com/clj-commons/etaoin/issues/388[#388]: Drop testing for PhantomJS, development has long ago stopped for PhantomJS
* https://github.com/clj-commons/etaoin/issues/387[#387]: No longer testing multiple key modifiers for a single webdriver send keys request
* https://github.com/clj-commons/etaoin/issues/384[#384]: Look for `safaridriver` on PATH by default
* https://github.com/clj-commons/etaoin/issues/402[#402]: Only send body for webdriver `POST` requests to appease `safaridriver`
* https://github.com/clj-commons/etaoin/issues/403[#403]: The `select` fn now clicks on the `select` element before clicking the `option` element to appease `safaridriver`
* https://github.com/clj-commons/etaoin/issues/408[#408]: Fix `switch-window` for `msedgedriver`
* https://github.com/clj-commons/etaoin/issues/432[#432]: Switched from `project.clj` to `deps.edn`.
This will allow for easier testing of unreleased versions of Etaoin via git deps.
It also unconvered that our minimum Clojure version was 1.10, instead of the advertised v1.9.
Fixed.
* https://github.com/clj-commons/etaoin/issues/444[#444]: Visibility checks fixed for firefox and chrome (thanks https://github.com/daveyarwood[@daveyarwood]!)
* https://github.com/clj-commons/etaoin/issues/446[#446]: Bump Etaoin dependencies to current releases
* Docs
** Reviewed and updated API docstrings
** https://github.com/clj-commons/etaoin/issues/393[#393]: Add changelog